--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
