--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 
-spring.session.jdbc.initialize-schema=always
-spring.session.jdbc.table-name=SPRING_SESSION
+phone.book.repo.class=phoneBookDataDBRepo
+user.repo.class=userDBRepo
+
+json.db.path=null
